[add] recycler view

--- a/app/src/main/res/layout/item_video.xml
+++ b/app/src/main/res/layout/item_video.xml
@@ -39,6 +39,9 @@
             android:id="@+id/tv_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:scrollHorizontally="true"
+            android:lines="1"
             android:textSize="12sp"
             android:text="@string/dummy_title"
             android:gravity="end"/>
