--- a/app/src/main/res/layout/item_video.xml
+++ b/app/src/main/res/layout/item_video.xml
@@ -7,7 +7,7 @@
     android:paddingStart="8dp"
     android:paddingEnd="8dp">
 
-  <android.support.v7.widget.CardView
+  <androidx.cardview.widget.CardView
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:padding="8dp"
@@ -86,5 +86,5 @@
 
       </LinearLayout>
     </LinearLayout>
-  </android.support.v7.widget.CardView>
+  </androidx.cardview.widget.CardView>
 </LinearLayout>
